fix: mapper medlemskap, pleiebehov, fikser lovbestemt ferie